--- a/bundle/manifests/gpte.opentlc.com_giteas.yaml
+++ b/bundle/manifests/gpte.opentlc.com_giteas.yaml
@@ -240,6 +240,19 @@ spec:
                   claim. Default is empty - which will create a PVC using the currently
                   available default storage class on the cluster.
                 type: string
+              giteaEnvVars:
+                description: 'Environment variables to be passed to the Gitea container.
+                  Default: [{"name": "TZ", "value": "America/New_York"}]'
+                items:
+                  properties:
+                    name:
+                      description: Name of the environment variable.
+                      type: string
+                    value:
+                      description: Value of the environment variable.
+                      type: string
+                  type: object
+                type: array
               postgresqlCpuLimit:
                 anyOf:
                 - type: integer
