--- a/playbooks/gitea.yml
+++ b/playbooks/gitea.yml
@@ -88,3 +88,9 @@
       _gitea_mailer_helo_hostname: "{{ gitea_mailer_helo_hostname | default ('') }}"
       _gitea_register_email_confirm: "{{ gitea_register_email_confirm | default(false) | bool }}"
       _gitea_enable_notify_mail: "{{ gitea_enable_notify_mail | default(false) | bool }}"
+
+      _default_gitea_env_vars:
+        - name: TZ
+          value: "America/New_York"
+
+      _gitea_env_vars: {{ gitea_env_vars | default(_default_gitea_env_vars) }}
