add default _gitea_env_vars

--- a/roles/gitea-ocp/defaults/main.yml
+++ b/roles/gitea-ocp/defaults/main.yml
@@ -92,6 +92,4 @@ _gitea_user_name: ""
 # Actual Gitea user password
 _gitea_actual_user_password: ""
 
-_gitea_env_vars:
-  - name: TZ
-    value: "America/New_York"
+_gitea_env_vars: []
