--- a/bundle/manifests/gitea-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/gitea-operator.clusterserviceversion.yaml
@@ -19,9 +19,9 @@ metadata:
         }
       ]
     capabilities: Basic Install
-    operators.operatorframework.io/builder: operator-sdk-v1.14.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.10.1-ocp
     operators.operatorframework.io/project_layout: ansible.sdk.operatorframework.io/v1
-  name: gitea-operator.v1.3.1
+  name: gitea-operator.v1.3.2
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -30,7 +30,7 @@ spec:
     - kind: Gitea
       name: giteas.gpte.opentlc.com
       version: v1
-  description: Gitea Operator - provided by Red Hat GPTE, see https://github.com/redhat-gpte-devopsautomation/gitea-operator
+  description: Gitea Operator - provided by Ken Moini, see https://github.com/kenmoini/gitea-operator
     for documentation.
   displayName: Gitea Operator
   icon:
@@ -158,7 +158,7 @@ spec:
                 env:
                 - name: ANSIBLE_GATHERING
                   value: explicit
-                image: quay.io/gpte-devops-automation/gitea-operator:v1.3.1
+                image: quay.io/kenmoini/gitea-operator:v1.3.2
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -224,7 +224,6 @@ spec:
     name: Wolfgang Kulhanek
   maturity: stable
   provider:
-    name: Red Hat GPTE
+    name: Ken Moini
     url: www.redhat.com/partners
-  replaces: gitea-operator.v1.2.3
-  version: 1.3.1
+  version: 1.3.2
