--- a/catalog_source.yaml
+++ b/catalog_source.yaml
@@ -1,10 +1,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
 metadata:
-  name: redhat-gpte-gitea
+  name: kenmoini-gitea
   namespace: openshift-marketplace
 spec:
   sourceType: grpc
-  image: quay.io/gpte-devops-automation/gitea-catalog:latest
-  displayName: Red Hat GPTE (Gitea)
-  publisher: Red Hat GPTE
+  image: quay.io/kenmoini/gitea-catalog:latest
+  displayName: Gitea
+  publisher: Ken Moini
