--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,10 +37,10 @@ jobs:
           type=sha,prefix=,suffix=,format=long
           type=raw,value=latest
 
-    - name: Login to GitHub Container Registry
+    - name: Login to Container Registry
       uses: docker/login-action@v1 
       with:
-        registry: ghcr.io
+        registry: quay.io
         username: "${{ secrets.REGISTRY_USERNAME }}"
         password: "${{ secrets.REGISTRY_TOKEN }}"
 
@@ -75,10 +75,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to GitHub Container Registry
+    - name: Login to Container Registry
       uses: docker/login-action@v1 
       with:
-        registry: ghcr.io
+        registry: quay.io
         username: "${{ secrets.REGISTRY_USERNAME }}"
         password: "${{ secrets.REGISTRY_TOKEN }}"
 
@@ -128,10 +128,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to GitHub Container Registry
+    - name: Login to Container Registry
       uses: docker/login-action@v1 
       with:
-        registry: ghcr.io
+        registry: quay.io
         username: "${{ secrets.REGISTRY_USERNAME }}"
         password: "${{ secrets.REGISTRY_TOKEN }}"
 
