--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,11 +67,6 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
-    - name: Build the operator bundle
-      shell: bash
-      run: |
-        ./build-bundle.sh
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -82,29 +77,34 @@ jobs:
         username: "${{ secrets.REGISTRY_USERNAME }}"
         password: "${{ secrets.REGISTRY_TOKEN }}"
 
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v3
-      with:
-        # list of Docker images to use as base name for tags
-        images: |
-          quay.io/kenmoini/gitea-operator-bundle
-        # generate Docker tags based on the following events/attributes
-        tags: |
-          type=ref,event=branch
-          type=ref,event=tag
-          type=sha,prefix=,suffix=,format=short
-          type=sha,prefix=,suffix=,format=long
-          type=raw,value=latest
+    - name: Build the operator bundle
+      shell: bash
+      run: |
+        ./build-bundle.sh
 
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        file: ./bundle.Dockerfile
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+#    - name: Docker meta
+#      id: meta
+#      uses: docker/metadata-action@v3
+#      with:
+#        # list of Docker images to use as base name for tags
+#        images: |
+#          quay.io/kenmoini/gitea-operator-bundle
+#        # generate Docker tags based on the following events/attributes
+#        tags: |
+#          type=ref,event=branch
+#          type=ref,event=tag
+#          type=sha,prefix=,suffix=,format=short
+#          type=sha,prefix=,suffix=,format=long
+#          type=raw,value=latest
+
+#    - name: Build and push
+#      uses: docker/build-push-action@v2
+#      with:
+#        context: .
+#        push: true
+#        file: ./bundle.Dockerfile
+#        tags: ${{ steps.meta.outputs.tags }}
+#        labels: ${{ steps.meta.outputs.labels }}
 
   # Build the Operator Catalog
   build-operator-catalog:
@@ -120,11 +120,6 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
-    - name: Build the operator bundle
-      shell: bash
-      run: |
-        ./build-catalog.sh
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -135,26 +130,31 @@ jobs:
         username: "${{ secrets.REGISTRY_USERNAME }}"
         password: "${{ secrets.REGISTRY_TOKEN }}"
 
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v3
-      with:
-        # list of Docker images to use as base name for tags
-        images: |
-          quay.io/kenmoini/gitea-catalog
-        # generate Docker tags based on the following events/attributes
-        tags: |
-          type=ref,event=branch
-          type=ref,event=tag
-          type=sha,prefix=,suffix=,format=short
-          type=sha,prefix=,suffix=,format=long
-          type=raw,value=latest
+    - name: Build the operator bundle
+      shell: bash
+      run: |
+        ./build-catalog.sh
 
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        file: ./bundle.Dockerfile
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+#    - name: Docker meta
+#      id: meta
+#      uses: docker/metadata-action@v3
+#      with:
+#        # list of Docker images to use as base name for tags
+#        images: |
+#          quay.io/kenmoini/gitea-catalog
+#        # generate Docker tags based on the following events/attributes
+#        tags: |
+#          type=ref,event=branch
+#          type=ref,event=tag
+#          type=sha,prefix=,suffix=,format=short
+#          type=sha,prefix=,suffix=,format=long
+#          type=raw,value=latest
+#
+#    - name: Build and push
+#      uses: docker/build-push-action@v2
+#      with:
+#        context: .
+#        push: true
+#        file: ./bundle.Dockerfile
+#        tags: ${{ steps.meta.outputs.tags }}
+#        labels: ${{ steps.meta.outputs.labels }}
