--- a/bundle/manifests/gitea-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/gitea-operator.clusterserviceversion.yaml
@@ -21,7 +21,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.6.1+git
     operators.operatorframework.io/project_layout: ansible.sdk.operatorframework.io/v1
-  name: gitea-operator.v1.3.3
+  name: gitea-operator.v1.3.4
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -39,6 +39,14 @@ spec:
     spec:
       clusterPermissions:
       - rules:
+        - apiGroups:
+          - config.openshift.io
+          resources:
+          - proxies
+          verbs:
+          - get
+          - watch
+          - list
         - apiGroups:
           - ""
           resources:
@@ -157,7 +165,7 @@ spec:
                 env:
                 - name: ANSIBLE_GATHERING
                   value: explicit
-                image: quay.io/kenmoini/gitea-operator:v1.3.3
+                image: quay.io/kenmoini/gitea-operator:v1.3.4
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -225,4 +233,4 @@ spec:
   provider:
     name: Ken Moini
     url: www.redhat.com/partners
-  version: 1.3.3
+  version: 1.3.4
