--- a/roles/gitea-ocp/tasks/main.yml
+++ b/roles/gitea-ocp/tasks/main.yml
@@ -17,21 +17,6 @@
   set_fact:
     cluster_root_ca: cluster-root-ca-bundle
 
-- name: Set the fact for httpProxy
-  when: (r_cluster_proxy_config.resources[0].spec.httpProxy is defined) and (r_cluster_proxy_config.resources[0].spec.httpProxy != '')
-  set_fact:
-    http_proxy: "{{ r_cluster_proxy_config.resources[0].spec.httpProxy }}"
-
-- name: Set the fact for httpsProxy
-  when: (r_cluster_proxy_config.resources[0].spec.httpsProxy is defined) and (r_cluster_proxy_config.resources[0].spec.httpsProxy != '')
-  set_fact:
-    https_proxy: "{{ r_cluster_proxy_config.resources[0].spec.httpsProxy }}"
-
-- name: Set the fact for noProxy
-  when: (r_cluster_proxy_config.resources[0].spec.noProxy is defined) and (r_cluster_proxy_config.resources[0].spec.noProxy != '')
-  set_fact:
-    no_proxy: "{{ r_cluster_proxy_config.resources[0].spec.noProxy }}"
-
 - name: Set the needed empty ConfigMap for the cluster-wide certificates to {{ _gitea_state }}
   when: (r_cluster_proxy_config.resources[0].spec.trustedCA.name is defined) and (r_cluster_proxy_config.resources[0].spec.trustedCA.name != '')
   kubernetes.core.k8s:
@@ -48,6 +33,25 @@
         labels:
           config.openshift.io/inject-trusted-cabundle: 'true'
       data: {}
+
+# ===============================================================================================
+# Set Proxy Facts
+# ===============================================================================================
+
+- name: Set the fact for httpProxy
+  when: (r_cluster_proxy_config.resources[0].status.httpProxy is defined) and (r_cluster_proxy_config.resources[0].status.httpProxy != '')
+  set_fact:
+    http_proxy: "{{ r_cluster_proxy_config.resources[0].status.httpProxy }}"
+
+- name: Set the fact for httpsProxy
+  when: (r_cluster_proxy_config.resources[0].status.httpsProxy is defined) and (r_cluster_proxy_config.resources[0].status.httpsProxy != '')
+  set_fact:
+    https_proxy: "{{ r_cluster_proxy_config.resources[0].status.httpsProxy }}"
+
+- name: Set the fact for noProxy
+  when: (r_cluster_proxy_config.resources[0].status.noProxy is defined) and (r_cluster_proxy_config.resources[0].status.noProxy != '')
+  set_fact:
+    no_proxy: "{{ r_cluster_proxy_config.resources[0].status.noProxy }}"
 
 - name: Set OpenShift Objects for Gitea to {{ _gitea_state }}
   kubernetes.core.k8s:
